[gd_scene load_steps=17 format=3 uid="uid://crjtoa0bpqf46"]

[ext_resource type="Script" uid="uid://bom4iri20kvse" path="res://weapon_bullets/piercing_effect.gd" id="1_67yok"]
[ext_resource type="Texture2D" uid="uid://ciuajgo21ep84" path="res://weapon_bullets/bullet1.png" id="2_n246i"]
[ext_resource type="Texture2D" uid="uid://m1m0gby3kjnx" path="res://weapon_bullets/bullet_piercing_1.png" id="3_2u444"]
[ext_resource type="Texture2D" uid="uid://cs6hxgdrvg4gj" path="res://weapon_bullets/bullet2.png" id="3_jlxks"]
[ext_resource type="Texture2D" uid="uid://daheglvlflcwk" path="res://weapon_bullets/bullet_piercing_2.png" id="4_irtm2"]
[ext_resource type="Texture2D" uid="uid://bp7n1qrqt8tm5" path="res://weapon_bullets/bullet_piercing_3.png" id="5_hywt4"]
[ext_resource type="Texture2D" uid="uid://btmk0llad3gmf" path="res://weapon_bullets/bullet_piercing_4.png" id="6_nyjw0"]
[ext_resource type="Texture2D" uid="uid://7s50k80yi7do" path="res://weapon_bullets/bullet_light_piercing_1.png" id="7_lia27"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_enbot"]
radius = 0.999975
height = 4.0

[sub_resource type="Animation" id="Animation_1kajj"]
length = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("piercing_light_1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("piercing_light_2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("piercing_light_3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("piercing_light_4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("piercing_light_5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kc6pb"]
resource_name = "piercing_light_1"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("piercing_light_1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.075),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_afg0k"]
resource_name = "piercing_light_2"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("piercing_light_2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.075),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_dtb6k"]
resource_name = "piercing_light_3"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("piercing_light_3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.075),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_aafak"]
resource_name = "piercing_light_4"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("piercing_light_4:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.075),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_hjuwy"]
resource_name = "piercing_light_5"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("piercing_light_5:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.075, 0.1, 0.125),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_srwea"]
_data = {
&"RESET": SubResource("Animation_1kajj"),
&"piercing_light_1": SubResource("Animation_kc6pb"),
&"piercing_light_2": SubResource("Animation_afg0k"),
&"piercing_light_3": SubResource("Animation_dtb6k"),
&"piercing_light_4": SubResource("Animation_aafak"),
&"piercing_light_5": SubResource("Animation_hjuwy")
}

[node name="piercing_effect" type="Area2D"]
collision_layer = 0
collision_mask = 65280
script = ExtResource("1_67yok")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57027
shape = SubResource("CapsuleShape2D_enbot")

[node name="BulletSprite" type="Sprite2D" parent="."]
position = Vector2(0, 8.9407e-08)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_n246i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_srwea")
}

[node name="BulletRay" type="Sprite2D" parent="."]
position = Vector2(-9, 0)
texture = ExtResource("3_jlxks")

[node name="piercing_light_1" type="Sprite2D" parent="."]
texture = ExtResource("7_lia27")

[node name="piercing_light_2" type="Sprite2D" parent="."]
texture = ExtResource("3_2u444")

[node name="piercing_light_3" type="Sprite2D" parent="."]
texture = ExtResource("4_irtm2")

[node name="piercing_light_4" type="Sprite2D" parent="."]
texture = ExtResource("5_hywt4")

[node name="piercing_light_5" type="Sprite2D" parent="."]
texture = ExtResource("6_nyjw0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
